# coihuin-spec

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  STATUS.md
.claude/agents/: snapshot-researcher.md
.claude/commands/: web-research.md
.github/ISSUE_TEMPLATE/: configuration.yml  enhancement.yml  hotfix.yml  migration.yml  security.yml
.vantage/: config.json
checkpoints/active/: chk-cspec-restructure.md  chk-research-phase.md
checkpoints/archive/: chk-cspec-restructure.md
cspec/: CONSTITUTION.md
cspec/issues/: DEPENDENCY-GRAPH.md
docs/: MIGRATION-NOTES.md  agent-optimized-spec-format.md  change-taxonomy-system.md  cheatsheet.md  issue-template.md  issue-validation.md  methodology.md  research-phase-proposal.md  spec-driven-principle.md
docs/checkpoints/: consolidated.md
docs/journal/: 001-genesis.md  002-onboarding.md  003-cli-polish.md
docs/proposals/: eval-archive-proposal.md  research-phase-proposal.md
journal/: 2025-12-17.md
specs/: PROJECT.yaml
tooling/: README.md  USAGE.md  pyproject.toml
tooling/cspec/: __init__.py  cli.py  pyproject.toml  schemas.py
tooling/cspec/commands/cspec/: issue-start.md  plan-write.md  spec-write.md
tooling/cspec/src/cspec/: cli.py
tooling/cspec/src/cspec/commands/cspec/: init.md  issue-create.md  issue-validate.md  onboard.md
tooling/cspec/src/cspec/templates/: AGENTS.md
tooling/cspec/src/cspec/templates/issue_templates/: refactor.yml  removal.yml
tooling/cspec/templates/: AGENTS.md
tooling/cspec/templates/issue_templates/: bug.yml  deprecation.yml  feature.yml  optimization.yml
(+18 files in other folders)
