[project]
name = "cspec"
version = "0.1.0"
description = "Spec-driven development CLI tool"
readme = "README.md"
authors = [
    { name = "mabrax", email = "fvalenzuelabeck@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
cspec = "cspec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cspec"]

[tool.hatch.build.targets.wheel.force-include]
"cspec/commands" = "cspec/commands"
"cspec/templates" = "cspec/templates"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
